Añadida contraseña para la base de datos en el settings y poniendo bien el nombre del directorio.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     restart: unless-stopped
   web:
     build: .
-    command: python rabbitapp/manage.py runserver 0.0.0.0:8000
+    command: python rabbitApp/manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/rabbitApp
     ports:
