--- a/rabbitApp/requirements.txt
+++ b/rabbitApp/requirements.txt
@@ -11,3 +11,7 @@ whitenoise==4.1.4
 psycopg2==2.8.2
 Jinja2==2.10.1
 pipreqs==0.4.9
+whitenoise==3.3.1
+psycopg2==2.8.2
+psycopg2-binary
+dj-database-url
