--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,8 @@ whitenoise==4.1.4
 psycopg2==2.8.2
 Jinja2==2.10.1
 pipreqs==0.4.9
+psycopg2==2.8.2
+psycopg2-binary
+dj-database-url
+django-user
+django-user-agents
