procfile to deploy and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ rabbitApp/rabbit/migrations/__pycache__/
 rabbitApp/rabbitApp/__pycache__/
 rabbitApp/rabbit/migrations/*.py
 rabbitApp/db.sqlite3
+*/.idea/
